Run documentation flow only once

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,7 +1,9 @@
 # .github/workflows/documentation.yml
 name: Documentation
 
-on: [release]
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
