--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,26 @@
 name: test
 on:
-- pull_request
+  pull_request:
+  push:
+    branches:
+    - master
 jobs:
-  vapor_macos:
-    runs-on: macos-latest
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_11.4.1.app/Contents/Developer
-    steps:
-    - uses: actions/checkout@v2
-    - run: xcrun swift test --enable-test-discovery --sanitize=thread
-  vapor_bionic:
-    container: 
-      image: vapor/swift:5.2-bionic
+  linux:
     runs-on: ubuntu-latest
+    container: swift:5.2-bionic
     steps:
-    - uses: actions/checkout@v2
-    - run: swift test --enable-test-discovery --sanitize=thread
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run tests with Thread Sanitizer
+        run: swift test --enable-test-discovery --sanitize=thread
+  macOS:
+    runs-on: macos-latest
+    steps:
+      - name: Select latest available Xcode
+        uses: maxim-lobanov/setup-xcode@1.0
+        with:
+          xcode-version: latest
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Run tests with Thread Sanitizer
+        run: swift test --enable-test-discovery --sanitize=thread
